# uart_emulator

./: .gitignore  CMakeLists.txt  emulateddevice.cpp  emulateddevice.h  mainwindow.cpp  mainwindow.h
